--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
     "mongodb": "^6.20.0",
-    "mongoose": "^8.19.1",
+    "mongoose": "^8.19.2",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.9",
     "qrcode": "^1.5.4",
